<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <!-- Here you put the rest of your current view-->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:gravity="center_vertical|center_horizontal"
        android:id="@+id/rsslayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:transitionGroup="true"
        tools:context=".RSSActivity">

        <TableLayout
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <TableRow
                android:layout_height="match_parent"
                android:layout_width="wrap_content">

                <FrameLayout
                    android:layout_column="0" android:layout_span="3"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="32dp">

                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/statusTextView"
                        android:layout_column="3"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/app_name"
                        android:textSize="32sp"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </FrameLayout>

            </TableRow>

            <TableRow
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_height="match_parent"
                android:layout_width="wrap_content">

                <ImageButton
                    style="@style/tilesPortrait"
                    android:id="@+id/button0"
                    android:layout_column="0"
                    android:text="@string/button0"
                    android:background="@drawable/icon_0"/>

                <ImageButton
                    style="@style/tilesPortrait"
                    android:id="@+id/button1"
                    android:layout_column="1"
                    android:text="@string/button1"
                    android:background="@drawable/icon_1"/>



            </TableRow>

            <TableRow
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                <ImageButton
                    style="@style/tilesPortrait"
                    android:id="@+id/button2"
                    android:layout_column="0"
                    android:text="@string/button2"
                    android:background="@drawable/icon_2"/>

                <ImageButton
                    style="@style/tilesPortrait"
                    android:id="@+id/button3"
                    android:layout_column="1"
                    android:text="@string/button3"
                    android:background="@drawable/icon_3"/>


            </TableRow>

            <TableRow
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                <ImageButton
                    style="@style/tilesPortrait"
                    android:id="@+id/button4"
                    android:layout_column="0"
                    android:text="@string/button4"
                    android:background="@drawable/icon_4"/>

                <ImageButton
                    style="@style/tilesPortrait"
                    android:id="@+id/button5"
                    android:layout_column="1"
                    android:text="@string/button5"
                    android:background="@drawable/icon_5"/>

            </TableRow>

            <TableRow
                android:layout_height="match_parent"
                android:layout_width="match_parent">
                <ImageButton
                    style="@style/tilesPortrait"
                    android:id="@+id/button6"
                    android:layout_column="0"
                    android:text="@string/button6"
                    android:background="@drawable/icon_6" />

                <ImageButton
                    style="@style/tilesPortrait"
                    android:id="@+id/button7"
                    android:layout_column="1"
                    android:text="@string/button7"
                    android:background="@drawable/icon_7"/>
            </TableRow>


        </TableLayout>

    </RelativeLayout>
</ScrollView>

